FIX: z-index of user actions dropdown menu

--- a/app/javascript/mi_locations/stylesheets/header.sass
+++ b/app/javascript/mi_locations/stylesheets/header.sass
@@ -70,7 +70,7 @@
       @apply text-blue-800 bg-gray-400 rounded
 
 .user-action-dropdown
-  @apply mt-2 bg-gray-200 rounded-lg absolute right-0 w-48
+  @apply mt-2 bg-gray-200 rounded-lg absolute right-0 w-48 z-10
 
   @screen sm
     @apply
